tests/build/widget_new/incorrect_arg_type1.stderr
error[E0277]: the trait bound `bool: IntoVar<SideOffsets>` is not satisfied
  --> $DIR/incorrect_arg_type1.rs:6:18
   |
6  |         margin = true
   |                  ^^^^
   |                  |
   |                  expected an implementor of trait `IntoVar<SideOffsets>`
   |                  help: consider borrowing here: `&true`
   |
note: required by `margin_ArgsImpl::<T_margin>::new`
  --> $DIR/layout.rs:36:1
   |
36 | #[property(outer, default(0))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `property` (in Nightly builds, run with -Z macro-backtrace for more info)
